--- a/MessageProcessing.TestEngine.Tests/MessageProcessing.TestEngine.Tests.csproj
+++ b/MessageProcessing.TestEngine.Tests/MessageProcessing.TestEngine.Tests.csproj
@@ -71,6 +71,7 @@
     <Compile Include="NullableOperandExtensionsTest.cs" />
     <Compile Include="OperandTest.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
+    <Compile Include="ScenarioClockTest.cs" />
     <Compile Include="ScenarioTest.cs" />
     <Compile Include="TheCommand.cs" />
     <Compile Include="TheCommandHandler.cs" />
