--- a/MessageProcessing/MessageProcessing.csproj
+++ b/MessageProcessing/MessageProcessing.csproj
@@ -74,18 +74,21 @@
     <Compile Include="HandlesMessagesFromAttribute.cs" />
     <Compile Include="IClock.cs" />
     <Compile Include="IMessageHandler.T1.cs" />
-    <Compile Include="IMessageHandlerWithAttributes.T1.cs" />
+    <Compile Include="IMessageHandlerPipeline.T1.cs" />
     <Compile Include="InvalidCommandException.cs" />
     <Compile Include="IUnitOfWorkManager.cs" />
+    <Compile Include="LazyMessageHandlerPipeline.T1.cs" />
     <Compile Include="MachineClock.cs" />
     <Compile Include="DomainEventBusSubscriptionForInterface.T1.cs" />
     <Compile Include="InstanceLifetimeAttribute.cs" />
     <Compile Include="Message.cs" />
-    <Compile Include="MessageHandlerWithAttributes.T1.cs" />
+    <Compile Include="MessageHandlerPipeline.T1.cs" />
     <Compile Include="MessageHandlerClass.cs" />
+    <Compile Include="MessageHandlerPipelineDecorator.T1.cs" />
     <Compile Include="MessageHandlerPipelineFactory.cs" />
-    <Compile Include="MessageHandlerWithAttributesForAction.T1.cs" />
-    <Compile Include="MessageHandlerWithAttributesForInterface.T1.cs" />
+    <Compile Include="MessageHandlerPipelineForAction.T1.cs" />
+    <Compile Include="MessageHandlerPipelineForClass.T1.cs" />
+    <Compile Include="MessageHandlerPipelineForInterface.T1.cs" />
     <Compile Include="MessageProcessorContextCache.cs" />
     <Compile Include="MessageProcessorContext.cs" />
     <Compile Include="MessageProcessor.cs" />
