--- a/MessageProcessor.Core/MessageProcessor.Core.csproj
+++ b/MessageProcessor.Core/MessageProcessor.Core.csproj
@@ -61,16 +61,21 @@
     <Compile Include="Aggregates\IDomainEvent.T1.cs" />
     <Compile Include="Aggregates\IWritableEventStream.T1.cs" />
     <Compile Include="Aggregates\MemoryEventStream.T1.cs" />
+    <Compile Include="Clocks\Clock.cs" />
+    <Compile Include="Clocks\ClockScope.cs" />
+    <Compile Include="Clocks\ClockWithOffset.cs" />
+    <Compile Include="Clocks\IClockContext.cs" />
+    <Compile Include="Clocks\StaticClockContext.cs" />
+    <Compile Include="Clocks\StopwatchClock.cs" />
+    <Compile Include="Clocks\ThreadStaticClockContext.cs" />
     <Compile Include="IDomainEventBus.cs" />
-    <Compile Include="IMessageHandler.T1.cs" />
-    <Compile Include="IMessageProcessor.cs" />
     <Compile Include="UnitOfWorkController.cs" />
     <Compile Include="FlushHintAttribute.cs" />
-    <Compile Include="IClock.cs" />
+    <Compile Include="Clocks\IClock.cs" />
     <Compile Include="InvalidCommandException.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="IUnitOfWorkController.cs" />
-    <Compile Include="MachineClock.cs" />
+    <Compile Include="Clocks\SystemClock.cs" />
     <Compile Include="UnitOfWorkContext.cs" />
     <Compile Include="UnitOfWorkContextCache.cs" />
     <Compile Include="UnitOfWorkScope.cs" />
