--- a/MessageProcessor.Core/MessageProcessor.Core.csproj
+++ b/MessageProcessor.Core/MessageProcessor.Core.csproj
@@ -50,7 +50,6 @@
     <Compile Include="Aggregates\BufferedEventAggregate.T1.cs" />
     <Compile Include="Aggregates\IAggregateStore.T2.cs" />
     <Compile Include="Aggregates\Aggregate.T2.cs" />
-    <Compile Include="Aggregates\DomainEventBusAdapter.T1.cs" />
     <Compile Include="Aggregates\UnitOfWork.T2.cs" />
     <Compile Include="Aggregates\AggregateVersion.cs" />
     <Compile Include="Aggregates\DomainModelException.cs" />
@@ -61,6 +60,7 @@
     <Compile Include="Aggregates\IDomainEvent.T1.cs" />
     <Compile Include="Aggregates\IWritableEventStream.T1.cs" />
     <Compile Include="Aggregates\MemoryEventStream.T1.cs" />
+    <Compile Include="BufferedEvent.T1.cs" />
     <Compile Include="Clocks\Clock.cs" />
     <Compile Include="Clocks\ClockScope.cs" />
     <Compile Include="Clocks\ClockWithOffset.cs" />
@@ -68,13 +68,13 @@
     <Compile Include="Clocks\StaticClockContext.cs" />
     <Compile Include="Clocks\StopwatchClock.cs" />
     <Compile Include="Clocks\ThreadStaticClockContext.cs" />
+    <Compile Include="BufferedEventBus.cs" />
+    <Compile Include="IBufferedEvent.cs" />
     <Compile Include="IDomainEventBus.cs" />
     <Compile Include="UnitOfWorkController.cs" />
-    <Compile Include="FlushHintAttribute.cs" />
     <Compile Include="Clocks\IClock.cs" />
     <Compile Include="InvalidCommandException.cs" />
     <Compile Include="IUnitOfWork.cs" />
-    <Compile Include="IUnitOfWorkController.cs" />
     <Compile Include="Clocks\SystemClock.cs" />
     <Compile Include="UnitOfWorkContext.cs" />
     <Compile Include="UnitOfWorkContextCache.cs" />
@@ -86,8 +86,8 @@
       <DependentUpon>ExceptionMessages.resx</DependentUpon>
     </Compile>
     <Compile Include="UnitOfWorkWrapper.cs" />
-    <Compile Include="UnitOfWorkWrapperGroup.cs" />
-    <Compile Include="UnitOfWorkWrapperItem.cs" />
+    <Compile Include="UnitOfWorkGroup.cs" />
+    <Compile Include="UnitOfWorkItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\ExceptionMessages.resx">
