--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -7,4 +7,7 @@
   <repository path="..\05-MessageProcessing.TestEngine.Tests\packages.config" />
   <repository path="..\07-QueryExecution.Tests\packages.config" />
   <repository path="..\MessageProcessor.Core.Tests\packages.config" />
+  <repository path="..\MessageProcessor.TestEngine.Tests\packages.config" />
+  <repository path="..\MessageProcessor.Unity.Tests\packages.config" />
+  <repository path="..\MessageProcessor.Unity\packages.config" />
 </repositories>
