--- a/MessageProcessor.Core.Tests/05.MessageProcessor.UnitOfWork.Tests.csproj
+++ b/MessageProcessor.Core.Tests/05.MessageProcessor.UnitOfWork.Tests.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1D19D39A-15C6-4FDE-90C5-93188F2FC644}</ProjectGuid>
+    <ProjectGuid>{303380DB-4167-4BB0-8B78-63C959B65C4B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>YellowFlare.MessageProcessing</RootNamespace>
-    <AssemblyName>YellowFlare.MessageProcessor.Unity.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <AssemblyName>YellowFlare.MessageProcessor.UnitOfWork.Tests</AssemblyName>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -16,10 +16,6 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -30,7 +26,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -39,10 +35,11 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Practices.Unity, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.2.1.505.2\lib\NET35\Microsoft.Practices.Unity.dll</HintPath>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
@@ -62,26 +59,24 @@
     <Compile Include="..\AssemblyInfo.solution.cs">
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
+    <Compile Include="Clocks\ClockTest.cs" />
+    <Compile Include="Clocks\ClockWithOffsetTest.cs" />
+    <Compile Include="Clocks\StopwatchClockTest.cs" />
+    <Compile Include="Clocks\SystemClockTest.cs" />
+    <Compile Include="UnitOfWorkControllerTest.cs" />
+    <Compile Include="UnitOfWorkCacheTest.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
-    <Compile Include="PerUnitOfWorkLifetimeManagerTest.cs" />
-    <Compile Include="UnityTestProcessor.cs" />
+    <Compile Include="UnitOfWorkStub.cs" />
+    <Compile Include="UnitOfWorkOneAsyncTest.cs" />
+    <Compile Include="UnitOfWorkOneSyncTest.cs" />
+    <Compile Include="UnitOfWorkTwoSyncTest.cs" />
+    <Compile Include="UnitOfWorkWrapperGroupTest.cs" />
+    <Compile Include="UnitOfWorkWrapperItemTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MessageProcessor.Core\MessageProcessor.UnitOfWork.csproj">
+    <ProjectReference Include="..\MessageProcessor.Core\06.MessageProcessor.UnitOfWork.csproj">
       <Project>{757d77d3-7b32-4f21-9617-88274d50b517}</Project>
-      <Name>MessageProcessor.UnitOfWork</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MessageProcessor.Tests\MessageProcessor.Tests.csproj">
-      <Project>{dde1ca85-7907-4c67-91df-1ad824a44133}</Project>
-      <Name>MessageProcessor.Tests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MessageProcessor\MessageProcessor.csproj">
-      <Project>{ac14a5ec-bac2-44cf-b1ac-3942b25d92fd}</Project>
-      <Name>MessageProcessor</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MessageProcessor.Unity\MessageProcessor.Unity.csproj">
-      <Project>{77f45326-e908-47eb-b924-a3bd26cad6b0}</Project>
-      <Name>MessageProcessor.Unity</Name>
+      <Name>06.MessageProcessor.UnitOfWork</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
